# CampusRPG

./: .gitignore  BuildGame.cmd  CMakeLists.txt  CampusRPG.pro  README.md  RunGame.cmd  resources.qrc  任务分工与贡献度.md  启动游戏.bat  张申桥_开发历程.docx  张申桥_答辩.docx  张轩_开发历程.docx  张轩_答辩.docx  构建项目.bat  检查点四_完整版.docx  答辩分工文档.docx  谢文浩_开发历程.docx  谢文浩_答辩.docx  黄金弘_开发历程.docx  黄金弘_答辩.docx
include/: Character.h  Enemy.h  Equipment.h  Food.h  GameManager.h  Item.h  Location.h  Medicine.h  Profession.h  Shop.h  SpecialItem.h  Task.h
release/saves/: slot_2.ini  slot_3.ini  slot_4.ini
saves/: slot_1.ini
src/: Character.cpp  Enemy.cpp  Equipment.cpp  Food.cpp  GameManager.cpp  Item.cpp  Location.cpp  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  Medicine.cpp  Profession.cpp  Shop.cpp  SpecialItem.cpp  Task.cpp  main.cpp
tools/: build_assets.py  devlog_data.json  gen_defense_doc.py  gen_individual_docs.py
